added new items

--- a/style.css
+++ b/style.css
@@ -13,12 +13,10 @@
 }
 .card{
     border: 1px solid black;
-    padding: 0px 10px 10px 10px;
-    box-shadow: 4px 4px 8px black;
+    padding-bottom: 3rem;
+    margin: 3rem;
 }
-.card-img{
-    width: 200px;
-}
+
 
 .cart-container{
     width: 30%;
@@ -28,7 +26,4 @@
 .orders{
     display: flex;
     justify-content: space-around;
-}
-.searching{
-    text-align: center;
 }
